TPP | Quick checkout portal design - Launch Updates for Phase 1 (#652)
* TPP Quick Checkout: add Instantio plugin for a pop-up checkout functionality

Asana Task: https://app.asana.com/0/1205828450090907/1209289233857441/f

* TPP Checkout: introduce TPP controler class, add jandler in the JS, add button in my trips page, adjust terek-general to prevent conflicts

Asana Task: https://app.asana.com/0/1205828450090907/1209289233857441/f

* Allow payments on my account page
should remove the My Account page form the woo settings and change the schortcode with the custom in the page content
Asana Task: https://app.asana.com/1/5479760436208/project/1205828450090907/task/1209289233857441?focus=true

* Allow to finish Travel Protection Purchase without trigger the booking process
Next step: add a flag as item/order meta to separate the flows
Asana Task: https://app.asana.com/1/5479760436208/project/1205828450090907/task/1209289233857441?focus=true

* My Account: Redesign initial

* Dashboard redesign: Added some more styling changes

* Dashboard Redesign: Icons Update

* Dahboard: make the add to cart buttons to work

Asana Task: https://app.asana.com/1/5479760436208/project/1205828450090907/task/1209289233857441?focus=true

* My Account Dashboard: fix the missing icons
use .svg instead of .png
Asana Task: https://app.asana.com/1/5479760436208/project/1205828450090907/task/1209289233857441?focus=true

* My Account: use the WooCommerce clas for the custom shortcode, so can cahck for logged in users

Asana Task: https://app.asana.com/1/5479760436208/project/1205828450090907/task/1209289233857441?focus=true

* Dynamificate the trek dashboard

* TPP Checkout: Add a hook to store item meta after the order is completed

Asana Task: https://app.asana.com/1/5479760436208/project/1205828450090907/task/1209289233857441?focus=true

* Travel Protection Improvements

* Small styles fixes

* My Account Checkout: extract the quick view modal as component and prepare custom checkout modal


--- a/wp-content/themes/trek-travel-theme/assets/css/trek-admin.css
+++ b/wp-content/themes/trek-travel-theme/assets/css/trek-admin.css
@@ -9,3 +9,30 @@ table.wp-list-table .column-parent_product,
 table.wp-list-table .column-orders_count {
 	width: 7% !important;
 }
+
+.related-orders-list {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 8px;
+}
+.related-order-link {
+	display: inline-block;
+	padding: 2px 5px;
+	background: #f0f0f1;
+	border-radius: 3px;
+	color: #50575e;
+	text-decoration: none;
+	cursor: inherit !important;
+}
+.related-order-link.travel-protection {
+	background: #ebe9ff;
+	color: #674399;
+}
+.related-order-link.booking {
+	background: #e6f6e8;
+	color: #2a6638;
+}
+.related-order-link:hover {
+	background: #007cba;
+	color: #fff;
+}
