--- a/wp-content/themes/trek-travel-theme/src/scss/_checkout.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_checkout.scss
@@ -89,6 +89,7 @@ body.trek-checkout:not(.admin-bar) .mx-0.checkout-trek.pt-5 {
 @import 'checkout/checkout-payment';
 @import 'checkout/checkout-reviews';
 @import 'checkout/checkout-summary';
+@import 'checkout/checkout-travel-protection';
 
 
 #tt-review-order {
