--- a/wp-content/themes/trek-travel-theme/src/scss/myaccount/_communication-preferences.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/myaccount/_communication-preferences.scss
@@ -13,6 +13,7 @@
         background-color: $white;
         border-bottom: 4px solid $blue;
         padding: 32px 20px 40px 20px;
+        box-shadow: 0px 8px 13px 2px rgba(0,0,0,.25);
     }
     &__flex {
         gap: 24px;
