Fix hotel room icons on the Post Booking Checklist page (#656)
* Fix the bed icons

* Fix the selected rooms - tablet

* Fix guests container - tablet

---------

Co-authored-by: Polina Todorova <ptodorova@devrix.com>

--- a/wp-content/themes/trek-travel-theme/src/scss/my-account/_dashboard.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/my-account/_dashboard.scss
@@ -494,6 +494,14 @@ ul.travel-protection-list {
       @media screen and (max-width: 768px) {
         padding: 0;
       }
+
+      .dashboard__trip {
+        .checkout-bikes__selected-rooms {
+          @media screen and (max-width: 991px) {
+            text-align: left !important;
+          }
+        }
+      }
     }
 
     &.my-profile-mobile, &.resource-center, &.my-travel-advisor {
