--- a/wp-content/themes/trek-travel-theme/src/scss/checkout/_checkout-bikes.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/checkout/_checkout-bikes.scss
@@ -20,9 +20,12 @@
     &__bed-icon{
         background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23clip0_1731_1673)'%3E%3Crect width='24' height='24' fill='white'/%3E%3Crect y='14' width='24' height='3' fill='%2328AAE1'/%3E%3Crect y='6' width='24' height='1' fill='%2328AAE1'/%3E%3Crect y='7' width='0.923077' height='5' fill='%2328AAE1'/%3E%3Crect x='23.0781' y='7' width='0.923077' height='5' fill='%2328AAE1'/%3E%3Crect y='12' width='24' height='1' fill='%2328AAE1'/%3E%3Cpath d='M6.5 10C4.875 10 1.48958 11 0 12H13C12.0521 11 8.125 10 6.5 10Z' fill='%2328AAE1'/%3E%3Cpath d='M17.5 10C15.875 10 12.4896 11 11 12H24C23.0521 11 19.125 10 17.5 10Z' fill='%2328AAE1'/%3E%3Crect x='21.2305' y='15' width='2.76923' height='3' fill='%2328AAE1'/%3E%3Crect y='15' width='2.76923' height='3' fill='%2328AAE1'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_1731_1673'%3E%3Crect width='24' height='24' fill='white'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E");
         background-repeat: no-repeat;
-        padding: 0 13px;
+        padding: 0 16px 0 13px;
         margin-left: 1rem;
         background-position: bottom;
+        display: table-cell;
+        width: 20px;
+        height: 24px;
     }
     &__edit-room-info-btn{
         border: 1px solid #000000 !important;
