--- a/wp-content/themes/trek-travel-theme/src/scss/myaccount/_mytrips-checklist.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/myaccount/_mytrips-checklist.scss
@@ -228,6 +228,10 @@
     .guests-booking-info {
         margin-top: 72px;
 
+        @media screen and (max-width: 991px) {
+            width: 100% !important;
+        }
+
         @media screen and (max-width: 768px) {
             margin-top: 0;
         }
