--- a/wp-content/themes/trek-travel-theme/src/scss/checkout/_checkout-summary.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/checkout/_checkout-summary.scss
@@ -56,7 +56,7 @@
 		padding: 24px;
 		background-color: #fff;
 		display: grid;
-		gap: 2rem;
+		gap: 1.1rem;
 		border-radius: 0 0 4px 4px;
 
 		hr {
@@ -96,12 +96,13 @@
     }
 	&__dues-today.d-flex {
        border: none;
-	   margin-top: 30px;
+	   margin-top: 22px;
 	   padding: 8px 0;
 
 	   .h5 {
-		font-size: 32px;
+		font-size: 24px;
 		line-height: 1.2;
+		font-weight: 500;
 	   }
     }
     // &__dues {
@@ -114,14 +115,15 @@
     // }
 
 	&__price-title {
-		margin-bottom: 22px;
+		margin-bottom: 12px;
 	}
+
 
 	&__table-row {
 		gap: 12px;
 		// border-top: 1px solid #F4F4F4;
 		border-bottom: 1px solid #F4F4F4;
-		padding: 12px 0px;
+		padding: 12px 0px 8px;
 
 
 		.text-start {
@@ -225,4 +227,50 @@
             text-decoration: none;
         }
     }
+}
+
+.checkout-summary__total{
+	.checkout-summary__table-row {
+		border-bottom: none;
+
+		.text-start {
+			p {
+				color: #51504F;
+				font-size: 15px;
+				font-weight: 400;
+				line-height: 130%;
+			}
+		}
+		.text-end {
+			p {
+				color: #706D6B;
+				font-size: 16px;
+				font-weight: 400 !important;
+				line-height: 120%;
+			}
+		}
+
+		&.checkout-summary__dues-today {
+			margin-top: 0;
+			padding-top: 23px;
+			border-top: 1px solid #f4f4f4;
+			padding-bottom: 0;
+			.text-start {
+				p {
+					color: black;
+					font-size: 18px;
+					font-weight: 700 !important;
+				}
+			}
+			.text-end {
+				p {
+					color: black;
+					font-size: 24px;
+					font-weight: 500 !important;
+					line-height: 120%;
+				}
+			}
+		}
+	}
+
 }
