Feature/web trip note (#662)
* PDP/Quick View/NS Trip Sync: add a web trip note from NS to the trip dates
update the trip details page, update sync process, update page templates
Asana Task: https://app.asana.com/1/5479760436208/project/1205828450090907/task/1210799758568552?focus=true

* PDP/Web Trip Note: make the date trip note dynamic with the info from NS

Asana Task: https://app.asana.com/1/5479760436208/project/1205472772784381/task/1210799758568552?focus=true

--- a/wp-content/themes/trek-travel-theme/src/scss/PDP/_pdp-dates-pricing.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/PDP/_pdp-dates-pricing.scss
@@ -357,6 +357,17 @@
                         margin-bottom: 1rem;
                     }
                 }
+                .accordion-date-note {
+                    .date-note {
+                        border: 1px solid #28AAE1;
+                        border-radius: 5px;
+                        display: flex;
+                        width: fit-content;
+                        padding: 8px;
+                        margin-top: 5px;
+                        flex-direction: column;
+                    }
+                }
             }
         }
         #nav-private{
