--- a/wp-content/themes/trek-travel-theme/src/scss/_pages.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_pages.scss
@@ -5,6 +5,7 @@
 @import "pages/landing";
 @import "pages/guides";
 @import "pages/testimonials";
+@import "pages/sustainability";
 // @import "pages/pdp-overview-section";
 // @import "pages/pdp-faq";
 // @import "pages/pdp-overview-navigation";
